<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:ems="10"
            android:textColor="@color/colorNegro"
            android:textColorHint="@color/colorNegro"
            android:inputType="textEmailAddress" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPassText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorNegro"
            app:passwordToggleDrawable="@drawable/contra"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorNegro">

            <EditText
                android:id="@+id/RContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contra"
                android:ems="10"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPassText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorNegro"
            app:passwordToggleDrawable="@drawable/contra"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorNegro">

            <EditText
                android:id="@+id/RConfirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmar"
                android:ems="10"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Facebook" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Google" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terminos" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cterminos" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/input"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="ingreso"
                android:layout_weight="1"
                android:text="@string/baceptar" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/input"
                android:layout_marginHorizontal="15dp"
                android:backgroundTint="@color/colorPrimaryClaro"
                android:layout_weight="1"
                android:text="@string/bcancelar" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>