<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorNegro"
            android:textColorHint="@color/colorNegro" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPassText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorNegro"
            app:passwordToggleDrawable="@drawable/contra"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorNegro">

            <EditText
                android:id="@+id/RContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contra"
                android:ems="10"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Facebook" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Google" />
        <Button
            android:id="@+id/ingreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ingreso"
            android:text="Ingresar" />



        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="registro"
                android:layout_weight="1"
                android:background="@drawable/input"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/registro" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>